// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionAndCancelButtonsComponent render with primary button href == null 1`] = `
<DocumentFragment>
  <div
    class="actionAndCancelButtonsComponent"
  >
    <div
      class="actionCancelButtonCol"
    >
      <mock-button
        classname="cancelButton"
      >
        Cancel
      </mock-button>
    </div>
    <div
      class="actionCancelButtonCol"
    >
      <mock-button
        appearance="primary"
        classname="actionButtonEnabled"
        disabled="false"
        target="_self"
      >
         Test 
      </mock-button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActionAndCancelButtonsComponent render with primary button href == sample href 1`] = `
<DocumentFragment>
  <div
    class="actionAndCancelButtonsComponent"
  >
    <div
      class="actionCancelButtonCol"
    >
      <mock-button
        classname="cancelButton"
      >
        Cancel
      </mock-button>
    </div>
    <div
      class="actionCancelButtonCol"
    >
      <mock-button
        appearance="primary"
        classname="actionButtonEnabled"
        disabled="false"
        href="sample href"
        target="_blank"
      >
         Test 
      </mock-button>
    </div>
  </div>
</DocumentFragment>
`;
